# Vivec

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse.rs  util.rs
src/groups/: aact.rs  acti.rs  addn.rs  alch.rs  ammo.rs  anio.rs  appa.rs  arma.rs  armo.rs  arto.rs  aspc.rs  astp.rs  avif.rs  book.rs  common.rs  mod.rs
src/records/: aact.rs  achr.rs  acti.rs  addn.rs  alch.rs  ammo.rs  anio.rs  appa.rs  arma.rs  armo.rs  arto.rs  aspc.rs  astp.rs  avif.rs  book.rs  mod.rs  tes4.rs
src/records/common/: formid.rs  full_string.rs  lstring.rs  mod.rs  null_terminated_string.rs  version_control_info.rs  windows1252_string.rs
src/records/fields/: common.rs  common_item.rs  ctda.rs  dest.rs  edid.rs  formid_wrap.rs  full.rs  kwda.rs  mod.rs  modl.rs  obnd.rs  rgbu.rs  vmad.rs
src/records/fields/common/: formid_wrap.rs  item.rs  mod.rs  object.rs  rgbu.rs
