[package]
name = "vivec"
version = "0.1.0"
authors = ["MinusGix <MinusGix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
nom = "5.1.2"
bstr = "0.2.13"

[dependencies.derive_more]
version = "0.99.9"
default-features = false
features = ["from", "deref"]